cmake_minimum_required(VERSION 3.5)

add_executable(PingPongTcpServer TcpServer.cpp)
target_link_libraries(PingPongTcpServer NetworkToolLib)

add_executable(PingPongTcpClient TcpClient.cpp)
target_link_libraries(PingPongTcpClient NetworkToolLib)

add_executable(PingPongUdpServer UdpServer.cpp)
target_link_libraries(PingPongUdpServer NetworkToolLib)

add_executable(PingPongUdpClient UdpClient.cpp)
target_link_libraries(PingPongUdpClient NetworkToolLib)
